# ai

./: README.md  pyproject.toml
src/ai/test_package/: __init__.py  example.py
