[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_chandler-scott"
version = "0.0.1"
authors = [
  { name="Chandler Scott", email="scotcd1@etsu.edu" },
]
description = "A library for artificial intelligence algorithms"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/chandler-scott/ai"
Issues = "https://github.com/chandler-scott/ai/issues"
